Fix: update glibc to eliminate CVE-2025-8058 Vulnerability

--- a/make/photon/redis/Dockerfile.base
+++ b/make/photon/redis/Dockerfile.base
@@ -4,3 +4,6 @@ RUN tdnf install -y shadow >> /dev/null \
     && groupadd -g 999 redis \
     && useradd -u 999 -g 999 -c "Redis Database Server" -d /var/lib/redis -s /sbin/nologin -m redis
 RUN tdnf install -y redis && tdnf clean all
+
+RUN tdnf -y update glibc glibc-libs glibc-i18n \
+    && tdnf clean all
