--- a/make/photon/nginx/Dockerfile.base
+++ b/make/photon/nginx/Dockerfile.base
@@ -5,3 +5,6 @@ RUN tdnf install -y nginx shadow >> /dev/null \
     && groupmod -g 10000 nginx && usermod -g 10000 -u 10000 -d /home/nginx -s /bin/bash nginx \
     && ln -sf /dev/stdout /var/log/nginx/access.log \
     && ln -sf /dev/stderr /var/log/nginx/error.log
+
+RUN tdnf -y update glibc glibc-libs glibc-i18n \
+    && tdnf clean all
