--- a/make/photon/portal/Dockerfile.base
+++ b/make/photon/portal/Dockerfile.base
@@ -6,3 +6,6 @@ RUN tdnf install -y nginx shadow >> /dev/null \
     && ln -sf /dev/stderr /var/log/nginx/error.log \
     && groupmod -g 10000 nginx && usermod -g 10000 -u 10000 -d /home/nginx -s /bin/bash nginx \
     && chown -R nginx:nginx /etc/nginx
+
+RUN tdnf -y update glibc glibc-libs glibc-i18n \
+    && tdnf clean all
