--- a/make/photon/prepare/Dockerfile.base
+++ b/make/photon/prepare/Dockerfile.base
@@ -6,3 +6,6 @@ RUN pip3 install pipenv==2022.1.8
 #To install only htpasswd binary from photon package httpd
 RUN tdnf install -y rpm cpio apr-util
 RUN tdnf -y --downloadonly --downloaddir=/tmp/ install httpd && rpm2cpio /tmp/httpd-*.rpm | cpio -ivdm ./usr/bin/htpasswd && rm -f /tmp/*
+
+RUN tdnf -y update glibc glibc-libs glibc-i18n \
+    && tdnf clean all
